WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165323
[CSS Parser] Fix :any/:host to allow pseudo-elements. Support -webkit-border-radius.
https://bugs.webkit.org/show_bug.cgi?id=165323
Summary
[CSS Parser] Fix :any/:host to allow pseudo-elements. Support -webkit-border-...
Dave Hyatt
Reported
2016-12-02 12:09:52 PST
[CSS Parser] Fix :any/:host to allow pseudo-elements. Support -webkit-border-radius.
Attachments
Patch
(2.29 KB, patch)
2016-12-02 12:10 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-02 12:10:34 PST
Created
attachment 295974
[details]
Patch
Dave Hyatt
Comment 2
2016-12-02 12:21:11 PST
Fixed in
r209255
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug