[CSS Parser] Fix :any/:host to allow pseudo-elements. Support -webkit-border-radius. https://bugs.webkit.org/show_bug.cgi?id=165323

Reviewed by Dean Jackson.

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseShorthand):
* css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParser::consumePseudo):



Canonical link: https://commits.webkit.org/182935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209255 268f45cc-cd09-0410-ab3c-d52691b4dbfc